--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
+  <h1>4th Day Function Task</h1>
+  <h2>Kindly see the Console for Result</h2>
   <script src="script.js"></script>
   <script src="/script2.js"></script>
-  </body>
+</body>
+
 </html>
